# es-code-search-demo

./: README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  formatting.py  models.py
app/search/: __init__.py  cooperative.py  mgrep_runner.py  serena_runner.py
scripts/: check_env.sh  run_demo.sh
tests/: test_smoke.py
